changed mad libs page

--- a/madlibs.html
+++ b/madlibs.html
@@ -13,6 +13,41 @@
 <body>
     <div class="container">
         <h1>Cop Buddies</h1>
+        <form>
+            Adjective:<br>
+            <input type="text" id="adjective"><br>
+            Verb in Past Tense:<br>
+            <input type="text" id="verb"><br>
+            City:<br>
+            <input type="text" id="city"><br>
+            First Name:<br>
+            <input type="text" id="name1"><br>
+            First Name:<br>
+            <input type="text" id="name2"><br>
+            Store Name:<br>
+            <input type="text" id="store"><br>
+            Car Brand:<br>
+            <input type="text" id="car"><br>
+            Plural Noun:<br>
+            <input type="text" id="plurNoun"><br>
+            Adverb:<br>
+            <input type="text" id="adverb"><br>
+            Toy:<br>
+            <input type="text" id="toy"><br>
+            Animal:<br>
+            <input type="text" id="animal"><br>
+            Verb:<br>
+            <input type="text" id="verb2"><br>
+            Number:<br>
+            <input type="text" id="number"><br>
+            Adjective:<br>
+            <input type="text" id="adjective2"><br>
+        </form>
+
+        <button type="button" onclick="start()">Create Story</button>
+        <script src="madlibs.js"></script>
+
+        <p><a href="index.html">Return to Home Page</a></p>
     </div>
 </body>
 </html>
