hangman now works

--- a/hangman.html
+++ b/hangman.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<!--Template taken from https://codepen.io/cathydutton/pen/ldazc-->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +13,6 @@
 <body>
     <div class="wrapper">
         <h1>Hangman</h1>
-         <h2>Vanilla JavaScript Hangman Game</h2>
          <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
      </div>
      <div class="wrapper">
@@ -27,5 +29,6 @@
            <button id="reset">Play again</button>
          </div>
      </div>
+     <script src="hangman.js"></script>
 </body>
 </html>
