added links and changed hangman words

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
     <div id="boxes">
 
         <div class="box" id="box1">
-            <p>Mad Libs</p>
+            <a href="madlibs.html">
+                <p>Mad Libs</p>
+            </a>
         </div>
 
         <div class="box" id="box2">
-            <p>Hang Man</p>
+            <a href="hangman.html">
+                <p>Hang Man</p>
+            </a>
         </div>
 
         <div class="box" id="box3">
