reformatted pages and added documentation page

--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
     <h1>Pen and Paper Games</h1>
     <h2>Navigation</h2>
 
-    <div id="boxes">
+    <div class="container">
+        <div id="boxes">
+            <div class="box" id="box1">
+                <a href="madlibs.html">
+                    <p>Mad Libs</p>
+                </a>
+            </div>
 
-        <div class="box" id="box1">
-            <a href="madlibs.html">
-                <p>Mad Libs</p>
-            </a>
-        </div>
+            <div class="box" id="box2">
+                <a href="hangman.html">
+                    <p>Hang Man</p>
+                </a>
+            </div>
 
-        <div class="box" id="box2">
-            <a href="hangman.html">
-                <p>Hang Man</p>
-            </a>
-        </div>
+            <div class="box" id="box3">
+                <p>Dots</p>
+            </div>
 
-        <div class="box" id="box3">
-            <p>Dots</p>
+            <br>
+        
+            <div class="box" id="box4">
+                <a href="documentation.html">
+                    <p>Documentation</p>
+                </a>
+            </div>
         </div>
     </div>
 </body>
