--- a/dots.html
+++ b/dots.html
@@ -3,15 +3,15 @@
 
 	<head>
 
-		<title>Dots and Boxes: James Colannino</title>
+		<title>Document</title>
 
-		<link rel="stylesheet" type="text/css" href="css/dotsandboxes.css">
+		<link rel="stylesheet" type="text/css" href="dots-css/dotsandboxes.css">
 
-		<script src="js/vertex.js"></script>
-		<script src="js/line.js"></script>
-		<script src="js/square.js"></script>
-		<script src="js/board.js"></script>
-		<script src="js/game.js"></script>
+		<script src="dots-js/vertex.js"></script>
+		<script src="dots-js/line.js"></script>
+		<script src="dots-js/square.js"></script>
+		<script src="dots-js/board.js"></script>
+		<script src="dots-js/game.js"></script>
 
 	</head>
 
@@ -36,9 +36,9 @@
 
 			var game = new Game({
 
-				width: 10,
-				height: 10,
-				numPlayers: 2,
+				width: 5,
+				height: 5,
+				numPlayers: 3,
 				boardId: 'gameboard',
 
 				/**********************************************************/
@@ -47,15 +47,6 @@
 				// that the game object can be easily ported between applications
 				// (that is, if you really like my implementation that much...)
 				getPlayerData: function (playerNum) {
-
-					/*** ATTENTION:
-					I WAS GOING TO PROMPT FOR THE USER'S NAME, BUT IT WASN'T
-					MENTIONED IN THE DIRECTIONS, AND I WANTED TO ADHERE AS
-					STRICTLY AS POSSIBLE TO THE REQUIREMENTS.
-					var player = {
-						name: prompt("Enter player #" + playerNum + "'s name: "),
-					};
-					***/
 
 					var player = {};
 
@@ -69,6 +60,10 @@
 							player.name = 'Blue';
 							break;
 
+						case 3:
+							player.name = 'Purple';
+							break;
+							
 						default:
 							player.name = 'John Doe';
 							break;
@@ -125,6 +120,7 @@
 
 		</script>
 
+		<p><a href="index.html">Return to Home Page</a></p>
 	</body>
 
 </html>
