--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </div>
 
             <div class="box" id="box3">
-                <p>Dots</p>
+                <a href="dots.html">
+                    <p>Dots</p>
+                </a>
             </div>
         </div>
 
