added to documentation and added citation

--- a/documentation.html
+++ b/documentation.html
@@ -35,6 +35,27 @@
             I tried to figure this out for several hours, going back and forth between my code, W3Schools, and Stack Overflow, It finally worked
             after I decided to create the variables for each word inside the method done once the button was clicked.
         </p>
+
+        <h2>Hangman</h2>
+        <p>
+            <a href="https://codepen.io/cathydutton/pen/ldazc">See the Template I used</a>
+        </p>
+
+        <p>
+            I ended up keeping most of what the template had. I reorganized the game so that the drawings and 
+            lives counter were above the letters. I also changed the words, categories, and hints. I changed the color scheme to be 
+            similar to the rest of the website, with a bit of school spirit. 
+        </p>
+
+        <h2>Dots and Boxes</h2>
+        <p>
+            There was very little I could do to about the dots and boxes game. The first template I found was incredibly difficult to understand and the actual 
+            page looked very rough around the edges. The second template I found was much simpler and looked nicer on screen. However, It was still very complicated 
+            and several javascript files to work properly. I found that I could change very little and have the game still work as intended. I spent some time trying to 
+            allow you to select the number of players in game, but the game would not change from the default number. Also, I tried to have the page prompt each player for 
+            their name, but when the prompts were finished the game still wouldn't load. All in all, the dots and boxes game was the most difficult to grasp and would most 
+            likely have benefitted from choosing a different game for the third web page.
+        </p>
     </div>
 </body>
 </html>
