--- a/dots.html
+++ b/dots.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML>
+
+<!--Template found at https://github.com/crankycyclops/dots-and-boxes-->
+
 <html>
 
 	<head>
@@ -20,6 +23,8 @@
 		<div id="game-display">
 
 			<h2>Dots and Boxes</h2>
+
+
 			<h4 id="current-player-display" style="display: none;">
 				Current player:
 				<span id="player-name"></span>
@@ -38,14 +43,11 @@
 
 				width: 5,
 				height: 5,
-				numPlayers: 3,
+				numPlayers: 2,
 				boardId: 'gameboard',
 
 				/**********************************************************/
 
-				// function to get a player's data is defined externally so
-				// that the game object can be easily ported between applications
-				// (that is, if you really like my implementation that much...)
 				getPlayerData: function (playerNum) {
 
 					var player = {};
@@ -63,7 +65,7 @@
 						case 3:
 							player.name = 'Purple';
 							break;
-							
+
 						default:
 							player.name = 'John Doe';
 							break;
