reorganized hangman page

--- a/documentation.html
+++ b/documentation.html
@@ -53,7 +53,7 @@
             page looked very rough around the edges. The second template I found was much simpler and looked nicer on screen. However, It was still very complicated 
             and several javascript files to work properly. I found that I could change very little and have the game still work as intended. I spent some time trying to 
             allow you to select the number of players in game, but the game would not change from the default number. Also, I tried to have the page prompt each player for 
-            their name, but when the prompts were finished the game still wouldn't load. All in all, the dots and boxes game was the most difficult to grasp and would most 
+            their name, but when the prompts were finished the game still wouldn't load. All in all, the dots and boxes game was the most difficult to grasp and I would most 
             likely have benefitted from choosing a different game for the third web page.
         </p>
     </div>
