--- a/hangman.html
+++ b/hangman.html
@@ -13,21 +13,21 @@
 <body>
     <div class="wrapper">
         <h1>Hangman</h1>
-         <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
-     </div>
+        <p>Use the alphabet below to guess the word, or click hint to get a clue. </p>
+    </div>
      <div class="wrapper">
-         <div id="buttons">
-         </div>  
-         <p id="catagoryName"></p>
-         <div id="hold">
-         </div>
-         <p id="mylives"></p>
-         <p id="clue">Clue -</p>  
-          <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
-         <div class="container">
-           <button id="hint">Hint</button>
-           <button id="reset">Play again</button>
-         </div>
+    </div>   
+        <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
+        <p id="catagoryName"></p>
+        <div id="hold">
+        </div>
+        <p id="mylives"></p>
+        <p id="clue">Clue -</p> 
+        <div id="buttons"></div>
+        <div class="container">
+            <button id="hint">Hint</button>
+            <button id="reset">Play again</button>
+        </div>
      </div>
      <script src="hangman.js"></script>
 </body>
