last minute changes

--- a/dots.html
+++ b/dots.html
@@ -19,7 +19,7 @@
 	</head>
 
 	<body>
-
+		<div class="container">
 		<div id="game-display">
 
 			<h2>Dots and Boxes</h2>
@@ -123,6 +123,8 @@
 		</script>
 
 		<p><a href="index.html">Return to Home Page</a></p>
+		</div>
+		
 	</body>
 
 </html>
