--- a/hangman.html
+++ b/hangman.html
@@ -30,5 +30,7 @@
         </div>
      </div>
      <script src="hangman.js"></script>
+
+     <a href="index.html">Return to Home Page</a>
 </body>
 </html>
